deps/v8/test/message/fail/class-fields-private-throw-early-2.out
*%(basename)s:8: TypeError: Cannot write private member #x to an object whose class did not declare it
    ({}).#x = 1;
            ^
TypeError: Cannot write private member #x to an object whose class did not declare it
    at new X (*%(basename)s:8:13)
    at *%(basename)s:12:1